--- a/package.json
+++ b/package.json
@@ -1,29 +1,50 @@
 {
-  "name": "typeordie",
+  "name": "server",
   "version": "1.0.0",
-  "description": "**Note:** The project was previously deployed to Heroku. Recently we decided to shift it to AWS. Currently the project has been dockerized. Now looking towards deploying to AWS.",
-  "main": ".eslintrc.js",
+  "description": "",
+  "main": "index.js",
   "scripts": {
-    "test": "cd server && node dist/index.js",
-    "start": "cd server && node dist/index.js",
-    "build": "cd client && npm install && npm run build && cd .. && cd server && npm install && npm run build",
-    "server": "cd server && nodemon --verbose --watch \"server\" --ext \"ts,json\" --exec ts-node server/index.ts",
+    "test": "node dist/index.js",
+    "start": "node dist/index.js",
+    "build": "cd client  && npm run build && cd .. && npx tsc",
+    "server": "nodemon --verbose --watch \"server\" --ext \"ts,json\" --exec ts-node server/index.ts",
     "client": "cd client && npm start && cd ..",
-    "dev": "concurrently \"npm run client\" \"npm run server\""
-  },
-  "repository": {
-    "type": "git",
-    "url": "git+https://github.com/Bruteforceman/TypeOrDie.git"
+    "dev": "concurrently \"npm run client\" \"npm run server\"",
+    "dev": "concurrently \"npx tsc --watch\" \"nodemon -q dist/index.js\""
   },
   "keywords": [],
   "author": "",
   "license": "ISC",
-  "bugs": {
-    "url": "https://github.com/Bruteforceman/TypeOrDie/issues"
+  "dependencies": {
+    "bcrypt": "^5.0.1",
+    "dotenv": "^16.0.1",
+    "express": "^4.18.1",
+    "express-session": "^1.17.3",
+    "jsonwebtoken": "^8.5.1",
+    "mongoose": "^6.5.1",
+    "@testing-library/jest-dom": "^5.16.5",
+    "@testing-library/react": "^13.3.0",
+    "@testing-library/user-event": "^13.5.0",
+    "@types/jest": "^27.5.2",
+    "@types/node": "^16.11.47",
+    "@types/react": "^18.0.15",
+    "@types/react-dom": "^18.0.6",
+    "react": "^18.2.0",
+    "react-dom": "^18.2.0",
+    "react-router-dom": "^6.3.0",
+    "react-scripts": "5.0.1",
+    "typescript": "^4.7.4",
+    "web-vitals": "^2.1.4"
   },
   "devDependencies": {
-    "concurrently": "^7.3.0"
-  },
-  "homepage": "https://github.com/Bruteforceman/TypeOrDie#readme"
+    "@types/bcrypt": "^5.0.0",
+    "@types/express": "^4.17.13",
+    "@types/express-session": "^1.17.5",
+    "@types/jsonwebtoken": "^8.5.8",
+    "@types/node": "^18.6.4",
+    "concurrently": "^7.3.0",
+    "nodemon": "^2.0.19",
+    "typescript": "^4.7.4"
+  }
 }
 
