--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "test": "node dist/index.js",
+    "test": "echo no test",
     "start": "node dist/index.js",
     "build": "cd client  && npm run build && cd .. && npx tsc",
     "server": "nodemon --verbose --watch \"server\" --ext \"ts,json\" --exec ts-node server/index.ts",
